--- a/assets/scss/kopailay.scss
+++ b/assets/scss/kopailay.scss
@@ -1,4 +1,10 @@
 body {
     padding: 0;
     margin: 0;
+    font-family: Manrope, sans-serif;
+}
+
+@font-face {
+    font-family: Manrope;
+    src: url('/fonts/Manrope-VariableFont_wght.ttf') format('ttf');
 }
